    (ext:install-c-compiler) to switch back to the Lisp-to-C compiler.

  - Before issuing =make check= on the package package developer has to
    install ECL on the preferred destination (specified with "--prefix"
    parameter given to configure script).

* Pending changes since 21.2.1
** Enhancements
- Add hook functions for cl:ed via ext:*ed-functions* list
* 21.2.1 changes since 20.4.24
** Announcement
Dear Community,

We are announcing a new stable ECL release which fixes a number of bugs
from the previous release. Changes made include amongst others

- working generational and precise garbage collector modes
- support for using precompiled headers to improve compilation speed
- the bytecompiler correctly implements the ANSI specification for load
  time forms of literal objects in compiled files
- fixes for encoding issues when reading in the output of the MSVC compiler
- issues preventing ECL from compiling on Xcode 12 and running on ARM64
  versions of Mac OS have been rectified

More detailed information can be obtained from the CHANGELOG file and git
commit logs. We'd like to thank all people who contributed to this release.
Some of them are listed here (without any particular order): Paul Ruetz,
Karsten Poeck, Eric Timmons, Vladimir Sedach, Dima Pasechnik, Matthias
Köppe, Yuri Lensky, Tobias Hansen, Pritam Baral, Marius Gerbershagen and
Daniel Kochmański.

This release is available for download in a form of a source code archive
(we do not ship prebuilt binaries):

- [ECL 21.2.1 tarball archive](https://common-lisp.net/project/ecl/static/files/release/ecl-21.2.1.tgz)
- [The ECL Manual](https://common-lisp.net/project/ecl/static/manual/)

Happy Hacking,
The ECL Developers

** Enhancements
- less cryptic names in backtraces of C-compiled functions
- ECL can now use precompiled headers to speed up compilation. Use ~(setq
  c::*use-precompiled-headers* t)~ to enable this feature
** Issues fixed