@@ -544,8 +544,15 @@ shared libraries and standalone programs.
 @end deftypevar
 
 @deftypevar string {c:*user-ld-flags*}
-Flags and options to be passed to the linker when building FASL,
-shared libraries and standalone programs.
+Flags for options (e.g. @code{-Wl,foo} flags, usually in the
+@code{$LDFLAGS} variable in autoconf) to be passed to the linker when
+building FASL, shared libraries and standalone programs.
+@end deftypevar
+
+@deftypevar string {c:*user-ld-libs*}
+Flags for libraries (e.g. @code{-lfoo} flags, usually in the
+@code{$LIBS} variable in autoconf) to be passed to the linker when
+building FASL, shared libraries and standalone programs.
 @end deftypevar
 
 @deftypevar string {c:*cc-optimize*}
